# generative-agent

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  =0.2.9  =1.10.0  =2.0.0  AUTO_LINTING_GUIDE.md  CLAUDE.md  DEVELOPMENT_SETUP.md  DOCKER_TROUBLESHOOTING.md  EXECUTION_PLANNING_COMPLETE.md  HEARTBEAT_DIAGNOSTIC_RESULTS.md  LINTING_SETUP_SUMMARY.md  MEMORY_SYSTEM_IMPLEMENTATION_COMPLETE.md  Makefile  NEXT_STEPS.md  PHASE3_LIFECYCLE_COMPLETE.md  PHASE3_LIFECYCLE_REFACTORING.md  PHASE3_PRODUCTION_FIX.md  PHASE3_SEARCH_MIGRATION_COMPLETE.md  PHASE3_VALIDATION_RESULTS.md  PHASE4_COMPLETE.md  PHASE4_FINAL_STATUS.md  PHASE4_FINAL_VALIDATION.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_VALIDATION_RESULTS.md  PHASE4_WEEK1_COMPLETE.md  PLANNING_TO_PHASE4_ROADMAP.md  PROJECT_ANALYSIS_AND_MIGRATION_SUMMARY.md  README.md  REDIS_TIMER_COMMANDS.md  REFACTORING_STATUS_REVIEW.md  SEARCH_AND_PLANNING_DECISION.md  STRANDS_UNIVERSAL_AGENT_MIGRATION_PLAN.md  TECHNICAL_DEBT_REVIEW.md  TECH_DEBT_ASSESSMENT.md  THREADING_VIOLATIONS_FOUND.md  (+54 more)
.aider.tags.cache.v3/: cache.db-shm  cache.db-wal
.github/: pull_request_template.md
.serena/: project.yml
agents/: __init__.py  base_agent.py
archive/: base_client.py  test_openaillmclient.py
common/: agent_configuration.py  bus_packet.py  communication_manager.py  context_types.py  enhanced_event_context.py  event_context.py  event_handler_context.py  event_handler_llm.py  intent_collector.py  intent_processor.py  intents.py  memory_assessment.py  memory_importance_assessor.py  message_bus.py  planning_types.py  realtime_log.py  request_model.py  task_context.py  task_graph.py  task_graph_v2.py  workflow_intent.py
config/: __init__.py  anthropic_config.py  base_config.py  bedrock_config.py  config_manager.py  mcp_config.yaml  openai_config.py  supervisor_config.py
docker/: README.md  redis.conf
docs/: 01_ARCHITECTURE_OVERVIEW.md  01_DEPLOYMENT_GUIDE.md  02_STRANDS_UNIVERSAL_AGENT_MIGRATION_PLAN.md  03_COMPREHENSIVE_TEST_PLAN.md  04_CONFIGURATION_GUIDE.md  04_TASK_RESULT_SHARING.md  05_HYBRID_EXECUTION_ARCHITECTURE_DESIGN.md  06_FAST_PATH_ROUTING_DESIGN.md  06_STRANDS_UNIVERSAL_AGENT_MIGRATION_PLAN.md  07_WORKFLOW_DURATION_LOGGING.md  08_HYBRID_ROLE_LIFECYCLE_DESIGN.md  09_HYBRID_ROLE_MIGRATION_GUIDE.md  10_HYBRID_EXECUTION_ARCHITECTURE_DESIGN.md  10_REDIS_SHARED_TOOLS_GUIDE.md  11_CODE_QUALITY_IMPROVEMENT_CHECKLIST.md  12_COMPREHENSIVE_TIMER_SYSTEM_DESIGN.md  12_WORKFLOW_DURATION_LOGGING.md  13_FAST_REPLY_PERFORMANCE_OPTIMIZATION_DESIGN.md  13_UNIFIED_RESULT_STORAGE_ARCHITECTURE.md  14_HYBRID_ROLE_LIFECYCLE_DESIGN.md  15_UNIFIED_COMMUNICATION_ARCHITECTURE_DESIGN.md  16_REDIS_SHARED_TOOLS_GUIDE.md  16_SLACK_WORKFLOW_INTEGRATION_FIX_DESIGN.md  17_CODE_QUALITY_IMPROVEMENT_CHECKLIST.md  17_TIMER_NOTIFICATION_THREADING_FIX_DESIGN.md  18_COMPREHENSIVE_TIMER_SYSTEM_DESIGN.md  18_SCHEDULED_WORKFLOW_ARCHITECTURE_DESIGN.md  19_DYNAMIC_EVENT_DRIVEN_ROLE_ARCHITECTURE_DESIGN.md  19_UNIFIED_RESULT_STORAGE_ARCHITECTURE.md  20_THREADING_ARCHITECTURE_IMPROVEMENTS.md  21_HIGH_LEVEL_ARCHITECTURE_PATTERNS.md  21_SLACK_WORKFLOW_INTEGRATION_FIX_DESIGN.md  23_PURE_INTENT_ARCHITECTURE_REFACTOR_DESIGN.md  24_DYNAMIC_EVENT_DRIVEN_ROLE_ARCHITECTURE_DESIGN.md  24_UNIFIED_INTENT_PROCESSING_ARCHITECTURE.md  25_LEGACY_CODE_REMOVAL_CHECKLIST.md  25_THREADING_ARCHITECTURE_IMPROVEMENTS.md  26_HIGH_LEVEL_ARCHITECTURE_PATTERNS.md  26_HOME_ASSISTANT_MCP_INTEGRATION.md  27_THREADING_FIX_IMPLEMENTATION_PLAN.md  (+57 more)
examples/: hybrid_role_example.py
llm_provider/: __init__.py  base_client.py  deprecated_integ_factory.py  deprecated_test_factory.py  factory.py  integ_factory.py  mcp_client.py  mock_client.py  planning_tools.py  programmatic_role.py  prompt_library.py  request_router.py  request_router_fix.py  request_router_updated.py  role_registry.py  role_schema.py  runtime_agent_factory.py  search_tools.py  slack_tools.py  summarizer_tools.py  test_factory.py  tool_registry.py  universal_agent.py  weather_tools.py
roles/: .router_single_file.py.swp  README.md  core_calendar.py  core_conversation.py  core_planning.py  core_planning_v2_backup.py  core_router.py  core_search.py  core_smart_home.py  core_summarizer.py  core_timer.py  core_weather.py  router_single_file.py  router_single_file_updated.py  smart_home_single_file.py  timer_single_file.py  weather_single_file.py
scripts/: dev-setup.sh
shared_tools/: __init__.py  message_bus.py
supervisor/: __init__.py  (+27 more)
(+392 files in other folders)
